# src/routes/auth.js
@@ -6,5 +6,6 @@ const auth = require('../middlewares/authentication');
 router.post('/register', authController.register);
 router.post('/login', authController.login);
 router.get('/protected', auth, authController.protected);
+router.get('/ping', authController.ping);
 
 module.exports = router;
